# token-extensions-transfer-hook

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
doc/: transfer.puml
programs/civic-transfer-hook/: Cargo.toml
programs/civic-transfer-hook/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/civic-transfer-hook/tests/: functional.rs
tests/: civic-transfer-hook.ts
