[package]
name = "civic-transfer-hook"
version = "0.1.0"
description = "A Transfer Hook for Token2022 integrating Civic Pass"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "civic_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
solana-gateway = { version = "0.5.0", features = ["no-entrypoint"] }
solana-program = "1.17.16"
spl-discriminator = { git = "https://github.com/solana-labs/solana-program-library" }
spl-tlv-account-resolution = { git = "https://github.com/solana-labs/solana-program-library" }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { git = "https://github.com/solana-labs/solana-program-library" }
spl-type-length-value = { git = "https://github.com/solana-labs/solana-program-library" }

[dev-dependencies]
solana-program-test = "1.17.16"
solana-sdk = "1.17.16"